--- a/sign_in.html
+++ b/sign_in.html
@@ -9,11 +9,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Righteous&display=swap" rel="stylesheet">
     <title>sign in</title>
 </head>
-<body><div class="abdo"></div>
+<body>
     <section class="sign-section">
-        
         <div class="sign-in">
-            <h1>sign in and stya longer with us</h1>
+            <h1>sign in and stay with us</h1>
                 <label for="">email:</label>
                 <input type="email" placeholder="big.bro@gmail.com">
                 <label for="">password:</label>
@@ -67,7 +66,7 @@
             blank.children[3].style.translate = `150% 10%`;
         });
             function mobile_device(){
-                if(window.innerWidth <= 749){
+                if(window.innerWidth <= 749 || window.innerWidth<= 834){
                     sign_up.onclick = function(){
                         sign_up_section.style.translate = `0 0`
                     }
@@ -82,6 +81,7 @@
             };
             window.addEventListener('load', mobile_device);
             window.addEventListener('resize', mobile_device);
+            console.log(window.innerWidth)
     </script>
 </body>
 </html>
