--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- خط مشان تعرف يا عمري -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Righteous&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Righteous&family=Sedgwick+Ave&display=swap" rel="stylesheet">
     <title>Street</title>
 </head>
 <body>
@@ -27,7 +28,7 @@
     <!-- قسم الرأس -->
     <header class="head-section">
         <div id="head" class="head">
-        <img id="street" class="street" href="#top" src="source\images\1.png" alt="">
+        <img id="street" class="street" href="#top" src="source\images\0.png" alt="">
         <ul id="menu" class="nav-menu">
             <li><a href=""><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-shopping-cart"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M6 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 19m-2 0a2 2 0 1 0 4 0a2 2 0 1 0 -4 0" /><path d="M17 17h-11v-14h-2" /><path d="M6 5l14 1l-1 7h-13" /></svg>Shopping cart</a></li>
             <li><a href="products.html"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-brand-shopee"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M4 7l.867 12.143a2 2 0 0 0 2 1.857h10.276a2 2 0 0 0 2 -1.857l.867 -12.143h-16z" /><path d="M8.5 7c0 -1.653 1.5 -4 3.5 -4s3.5 2.347 3.5 4" /><path d="M9.5 17c.413 .462 1 1 2.5 1s2.5 -.897 2.5 -2s-1 -1.5 -2.5 -2s-2 -1.47 -2 -2c0 -1.104 1 -2 2 -2s1.5 0 2.5 1" /></svg>shop</a></li>
@@ -44,50 +45,53 @@
     </header>
     <!-- قسم السلايد -->
     <section class="slide-section">
+        <div class="dot-filde">
+            <div class="dot actve-1"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+        </div>
         <div class="slides">
             <div class="slide">
-                <img class="slide-img actve" src="source\images\slide-img\s_2.jpg" alt="" loading="lazy">
-                <img class="models actve-2" src="source\images\model\m_1 (1).png" alt="" loading="lazy">
-                <img class="content actve-3" src="source\images\content\c_1.png" alt=""  loading="lazy">
+                <h1>majestic</h1>
+                <img class="content actve-3" src="source/images/content/c_1.png" alt="">
+                <img class="models actve-2" src="source\images\model\m_1.png" alt="" loading="lazy">
                 <p class="prgraph actve-4">
                     <span>STAY COOL.</span> <br>
-                     be you. Fashion that’s simple, confident, and effortlessly stylish
+                     be you. <br>be the coolest one here !
                 </p>
             </div>
             <div class="slide">
-                <img class="slide-img" src="source\images\slide-img\s_3.jpg" alt="" loading="lazy">
+                <img class="content" src="source/images/content/c_2.png" alt="">
                 <img class="models" src="source\images\model\m_2.png" alt="" >
-                <img class="content" src="source\images\content\c_2.png" alt="" loading="lazy">
                 <p class="prgraph">
-                    <span>WE DON'T MAKE FASHION !</span> <br>
-                    we make you. Express your unique vibe
+                    <span> our FASHION !</span> <br>
+                    make you cool. <br> Express your unique vibe
                 </p>
             </div>
             <div class="slide">
-                <img class="slide-img" src="source\images\slide-img\s_4.jpg" alt="" loading="lazy">
+                <img class="content" src="source/images/content/c_3.png" alt="">
                 <img class="models" src="source\images\model\m_3.png" alt=""  loading="lazy">
-                <img class="content" src="source\images\content\c_3.png" alt="" loading="lazy">
                 <p class="prgraph">
-                    <span>COMFORT MEETS BLODNESS</span> <br>
-                    Relaxed looks with a daring edge
+                    <span>comfy products</span> <br>
+                    relax <br>and stay in comfort zone
                 </p>
             </div>
             <div class="slide">
-                <img class="slide-img" src="source\images\slide-img\s_5.jpg" alt="" loading="lazy">
+                <img class="content" src="source/images/content/c_4.png" alt="">
                 <img class="models" src="source\images\model\m_4.png" alt=""  loading="lazy">
-                <img class="content" src="source\images\content\c_4.png" alt="" loading="lazy">
                 <p class="prgraph">
-                    <span>GEAR UP FOR ANYTHING</span> <br>
-                    Unstoppable energy in every piece
+                    <span>GEAR UP</span> <br>
+                    feel that ? <br>you are Unstoppable bro!
                 </p>
             </div>
             <div class="slide">
-                <img class="slide-img" src="source\images\slide-img\s_6.jpg" alt="" loading="lazy">
+                <img class="content" src="source/images/content/c_5.png" alt="">
                 <img class="models" src="source\images\model\m_5.png" alt=""  loading="lazy">
-                <img class="content" src="source\images\content\c_5.png" alt="" loading="lazy">
                 <p class="prgraph">
-                    <span>RAW, UNFILTERED STYLE !</span> <br>
-                    The essence of the streets and youth spirit
+                    <span>UNFILTERED STYLE</span> <br>
+                    The essence of the streets <br> and youth spirit
                 </p>
             </div>
         </div>
