--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <p>Top quality! and fast delivery. <br> Respect for the hoodie</p>
             </div>
         </div>
-        <div class=" plus2"><a href="" class="more more-reviwes">more coolest reviwes→</a></div>
+        <div class=" plus2"><a href="" class="more more-reviwes">more reviwes→</a></div>
     </section>
     <!-- القسم السفلي -->
     <footer class="foot-section">
@@ -226,7 +226,6 @@
                         <div class="img-move"><img src="source/images/brands/teespring-logo-black-and-white.png" alt="" loading="lazy"></div>
                         <div class="img-move"><img src="source/images/brands/zara-logo.png" alt="" loading="lazy"></div>
                     </div>
-                    <!-- h  -->
                     <div class="brands">
                         <div class="img-move"><img src="source/images/brands/adidas-logo-black-and-white-2.png" alt="" loading="lazy"></div>
                         <div class="img-move"><img src="source/images/brands/asos-logo-1.png" alt="" loading="lazy"></div>
@@ -270,7 +269,7 @@
                     <hr>
                     <button><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-brand-google"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 2a9.96 9.96 0 0 1 6.29 2.226a1 1 0 0 1 .04 1.52l-1.51 1.362a1 1 0 0 1 -1.265 .06a6 6 0 1 0 2.103 6.836l.001 -.004h-3.66a1 1 0 0 1 -.992 -.883l-.007 -.117v-2a1 1 0 0 1 1 -1h6.945a1 1 0 0 1 .994 .89c.04 .367 .061 .737 .061 1.11c0 5.523 -4.477 10 -10 10s-10 -4.477 -10 -10s4.477 -10 10 -10z" /></svg>google accuont</button>
                     <p>why you don't have an accuont! <a href="sign_in.html">sign up</a></p>
-                    <!-- mobile device -->
+
                     <a href="sign_in.html">sign in →</a>
                 </div>
                 <div class="part foot-part">
